# FoxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  FoxEngine.sln  notes.txt  premake5.lua
FoxEngine/: CMakeLists.txt  FoxEngine.filters  FoxEngine.vcxproj  FoxEngine.vcxproj.filters
FoxEngine/src/: FoxEngine.h  fepch.h
FoxEngine/src/FoxEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
FoxEngine/src/FoxEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  TimeStep.h  Window.h
FoxEngine/src/FoxEngine/Debug/: Instrumentor.h
FoxEngine/src/FoxEngine/Event/: ApplicationEvent.cpp  ApplicationEvent.h  Event.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.h
FoxEngine/src/FoxEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
FoxEngine/src/FoxEngine/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
FoxEngine/src/FoxEngine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
FoxEngine/src/FoxEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  Object.cpp  Object.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
FoxEngine/src/FoxEngine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.cpp  ScriptableEntity.h
FoxEngine/src/FoxEngine/scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
FoxEngineEditor/: CMakeLists.txt  FoxEngineEditor.vcxproj  FoxEngineProfile-StartupSession.json  imgui.ini
FoxEngineEditor/assets/shaders/: FlatColor.glsl
FoxEngineEditor/src/: EditorApplication.cpp  EditorLayer.cpp  EditorLayer.h
Game/: CMakeLists.txt  FoxEngineProfile-RuntimeSession.json  FoxEngineProfile-StartupSession.json  Game.vcxproj  Game.vcxproj.filters  imgui.ini
Game/assets/shaders/: Texture.glsl
Game/src/: Game2D.cpp  Game2D.h  GameMain.cpp
scripts/: Generate project.bat
